--- a/MyLocality/app/build.gradle
+++ b/MyLocality/app/build.gradle
@@ -46,15 +46,15 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.spotify.sdk:spotify-player-24-noconnect-2.20b@aar'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.spotify.android:auth:1.0.0-alpha'
-    compile 'com.spotify.sdk:spotify-player-24-noconnect-2.20b@aar'
     compile 'com.android.support:customtabs:25.3.1'
+    compile 'com.google.android.gms:play-services-location:11.4.2'
     testCompile 'junit:junit:4.12'
-
 }
 
 
