--- a/MyLocality/app/src/main/AndroidManifest.xml
+++ b/MyLocality/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.maxlord.mylocality">
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:extractNativeLibs="false"
@@ -15,31 +18,26 @@
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="com.maxlord.mylocality.LoginActivity"/>
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="com.maxlord.mylocality.LoginActivity" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".SignupActivity" />
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity">
             //android:launchMode="singleInstance">
-
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-                // this needs to match the scheme and host of the redirect URI as defined in My applications page
                 <data
                     android:host="callback"
-                    android:scheme="mylocality-auth"/>
+                    android:scheme="mylocality-auth" />
             </intent-filter>
-
         </activity>
-
-        <activity android:name=".ResetPasswordActivity"/>
+        <activity android:name=".ResetPasswordActivity" />
         <activity
             android:name="com.spotify.sdk.android.authentication.LoginActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
