--- a/MyLocality/app/build.gradle
+++ b/MyLocality/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     compile 'com.spotify.android:auth:1.0.0-alpha'
     compile 'com.android.support:customtabs:25.3.1'
     compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.android.volley:volley:1.0.0'
     testCompile 'junit:junit:4.12'
 }
 
