--- a/MyLocality/app/build.gradle
+++ b/MyLocality/app/build.gradle
@@ -36,13 +36,8 @@ repositories {
         dirs 'libs'
     }
     mavenCentral()
-    maven {
-        url "https://jitpack.io"
-    }
-    maven {
-        url "https://maven.google.com"
-    }
-
+    maven { url "https://jitpack.io" }
+    maven { url "https://maven.google.com" }
 }
 
 
@@ -54,12 +49,12 @@ dependencies {
     compile 'com.spotify.sdk:spotify-player-24-noconnect-2.20b@aar'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'com.android.support:design:25.3.1'
     compile 'com.spotify.android:auth:1.0.0-alpha'
     compile 'com.android.support:customtabs:25.3.1'
-    compile 'com.google.android.gms:play-services-location:10.0.1'
-    compile "com.google.android.gms:play-services-maps:10.0.1"
+    compile 'com.google.android.gms:play-services-maps:11.8.0'
+    compile 'com.google.android.gms:play-services-location:11.8.0'
     compile 'com.android.volley:volley:1.0.0'
     testCompile 'junit:junit:4.12'
 }
