--- a/MyLocality/app/src/main/AndroidManifest.xml
+++ b/MyLocality/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.maxlord.mylocality">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
         android:allowBackup="true"
